--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
     width: 100%;
 }
 
+/* Navbar styling */
 ul {
     padding-left: 0;
 }
@@ -104,6 +105,45 @@ ul {
     color: var(--main_brown);
 }
 
+/* Grid for results page */
+.results-grid {
+    margin: auto;
+    width: 50%;
+    display: grid;
+    grid-template-columns: 32% 32% 32%;
+    grid-gap: 10px;
+    height: 40vmax;
+}
+
+.results-grid h2 {
+    grid-column: 2;
+    justify-self: center;
+    margin-bottom: 0;
+}
+
+.results-grid h3 {
+    grid-column: span 3;
+    margin-bottom: 0;
+}
+
+.results-grid h4 {
+    margin-top: .5em;
+}
+
+.result-item1 {
+    margin-bottom: 1.5em;
+}
+
+.fund-results {
+    grid-column: span 3;
+    justify-self: center;
+}
+
+.fund-results {
+    font-size: 1.5em;
+}
+
+
 /* CSS Grid for the checkbox */
 .custom-select {
     display: grid;
@@ -160,15 +200,26 @@ footer {
 }
 
 .footer-text {
+    width: 40%;
     padding: .5em 1em 2em 3em;
 }
 
 .footer h3 {
     margin-bottom: 0;
+    font-size: 1.2em;
+    line-height: 1.4;
+    font-weight: 400;
 }
 .footer p {
     margin-top: .4em;
+    padding-top: .5em;
     width: 65%;
+    line-height: 1.4;
+}
+
+#quote {
+    font-style: italic;
+    font-weight: 300;
 }
 
 /* Desktop + Tablet sized screens */
