Styles Coloring the of
There. I fucking did it.

Bur forreal:
Added basic colored text depending on which index is a higher percent

Thanks, Ryan.

--- a/styles.css
+++ b/styles.css
@@ -137,10 +137,8 @@ ul {
 .fund-results {
     grid-column: span 3;
     justify-self: center;
-}
-
-.fund-results {
     font-size: 1.5em;
+    font-family: almaq;
 }
 
 
