--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,12 @@ button:hover {
     grid-gap: 3em;
 }
 
+.about-body h2 {
+    grid-column: span 2;
+    justify-self: center;
+    margin-bottom: 0;
+}
+
 .flex-card {
     display: flex;
     flex-direction: column;
@@ -258,6 +264,15 @@ button:hover {
 
 .bio-txt {
     width: 80%;
+    align-self: center;
+}
+
+/* mission.html styles */
+
+.mission-img {
+    grid-column: 2;
+    max-width: 300px;
+    justify-self: center;
     align-self: center;
 }
 
