Reapplied the fonts chosen for the app during SLO Hacks, with alternate in case Adobe Fonts is down

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 :root {
     --main_brown: #35190A;
     --pastel_yellow: #FFECA8;
-    font-family: "Futura PT";
+    font-family: "Futura PT; sans-serif";
 }
 
 /* DOCUMENT DEFAULTS */
