fixed missing font face

--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ ul {
     grid-column: span 3;
     justify-content: center;
     font-size: 1.5em;
-    font-family: almaq;
+    font-family: almaq-refined;
     display: flex;
     flex-direction: column;
     justify-content: center;
